src/Pages/Stylesheets/UpcomingEvents.css
h1 {
    text-align: center;
    font-size: 4rem;
    font-weight: bold;
}
.event {
    margin: 2%;
    padding: 0 5%;

    color: white;

    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .5);
    text-shadow: 2px 2px 5px black;
    border-radius: 10px;
}

.event-info {
    display: flex;
    justify-content: space-between;
}

.event h1 {
    text-align: left;
    font-size: 5rem;
    font-weight: bold;
}

.date {
    position: relative;
    top: 2.25rem;

    font-size: 2.5rem;
}

.registration-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    
    font-size: 1.5rem;
}

.registration-info p {
    font-weight: bold;
    text-align: left;

    text-shadow: 2.5px 2.5px 5px black;
}

.registered-person-table {
    height: 9.5rem;
    width: 100%;
    overflow-y: scroll;
    scroll-behavior: smooth;
}

.registered-person-table table {
    width: 100%;
}

.registered-person-table tr {
    display: block;
    padding-left: 1rem;
}

.registered-person-table tr:not(:first-child) {
    margin-top: -.125rem;
}

.event-registration-button {    
    margin-top: 0.5rem;
    padding: .5rem 1rem;

    background-color: lightcoral;
    border-radius: 5px;
}

/* Registration Form Styling */
.EventForm {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 5%;
    z-index: 3;

    background-color: rgba(112, 128, 144, 0.975);
    border-radius: 1rem;

    font-size: 1.35rem;
    text-shadow: none;
}

.EventForm h1 {
    font-size: 2.5rem;
    text-align: center;
}

.EventForm div {
    margin: 1rem 0.5rem;

    display: flex;
    justify-content: space-between;
}

.EventForm input {
    margin-left: 0.5rem;
    padding-left: 2.5%;

    background-color: rgba(255, 255, 255, 0.5);
    color: black;
}

.EventForm input:active {
    background-color: white;
}

.EventForm ::-webkit-input-placeholder {
    color: rgba(0, 0, 0, .5);
}

.submit {
    margin-top: 1.75rem;

    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    background-color: darkslategray;
    padding: 0.5rem 0.75rem;
    border-radius: 1rem;
}

.x {
    background-color: none;
    position: absolute;
    top: 5%;
    right: 5%;
}

.x:hover {
    cursor: pointer;
}

@media only screen and (orientation: portrait) {
    .event-info {
        flex-direction: column;
        justify-content: flex-start;
    }
}

